doc: update go-api documentation
